# clsdumper

./: pyproject.toml
clsdumper/: cli.py
clsdumper/device/: connector.py
clsdumper/dumper/: dex_dumper.py  dex_manager.py  message_handler.py
clsdumper/extractor/: class_extractor.py
clsdumper/frida/: script_manager.py
clsdumper/utils/: formatting.py
